--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto text-white fs-5 ">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#personal" style="color: white;"><b>Personal</b></a>
+              <a class="nav-link active" aria-current="page" href="#personal" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Personal</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#education" style="color: white;"><b>Education</b></a>
+              <a class="nav-link active" aria-current="page" href="#education" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Education</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#career" style="color: white;"><b>Career</b></a>
+              <a class="nav-link active" aria-current="page" href="#career" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Career</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#achievements" style="color: white;"><b>Achievement</b></a>
+              <a class="nav-link active" aria-current="page" href="#achievements" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Achievement</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#nobel" style="color: white;"><b>Nobel Work</b></a>
+              <a class="nav-link active" aria-current="page" href="#nobel" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Nobel Work</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#books" style="color: white;"><b>Books</b></a>
+              <a class="nav-link active" aria-current="page" href="#books" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Books</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#summary" style="color: white;"><b>Summary</b></a>
+              <a class="nav-link active" aria-current="page" href="#summary" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>Summary</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#FAQs" style="color: white;"><b>FAQ</b></a>
+              <a class="nav-link active" aria-current="page" href="#FAQs" style="color: white;background-color:#1e3a5f ; text-align: center;"><b>FAQ</b></a>
             </li>
             
           </ul>
